--- a/CarsTARge22/CarsTARge22/Views/Cars/Index.cshtml
+++ b/CarsTARge22/CarsTARge22/Views/Cars/Index.cshtml
@@ -32,6 +32,7 @@
                     <td>@car.Year</td>
                     <td>
                         <a asp-action="details" asp-controller="cars" asp-route-id="@car.Id" class="btn btn-info">Details</a>
+                        <a asp-action="update" asp-controller="cars" asp-route-id="@car.Id" class="btn btn-warning">Edit</a>
                         <a asp-action="delete" asp-controller="cars" asp-route-id="@car.Id" class="btn btn-danger">Delete</a>
                     </td>
                 </tr>
